# quantshow

./: pyproject.toml
data/: 10.csv  10.xlsx  100.csv  100.xlsx  6.5.csv  6.5.xlsx  binance_BTC-USDT_1d_last3.0y.csv
scripts/: convert_xlsx_to_csv.py  fetch_ccxt_ohlcv.py
src/quantshow/: __init__.py  clients_dashboard.py
