[project]
name = "quantshow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dockettidal0b", email = "132276772+dockettidal0b@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.1",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "streamlit>=1.48.1",
    "plotly>=5.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
